--- a/src/index.css
+++ b/src/index.css
@@ -76,8 +76,8 @@
 }
 
 .scale-up-tl {
-	-webkit-animation: scale-up-tl 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-	        animation: scale-up-tl 0.6s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	-webkit-animation: scale-up-tl 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+	        animation: scale-up-tl 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
 }
 
  @-webkit-keyframes scale-up-tl {
@@ -162,53 +162,84 @@
 }
 
 .slide-br {
-	-webkit-animation: slide-br 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-br 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: slide-br 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-br 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
  @-webkit-keyframes slide-br {
   0% {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(-100px) translateX(-100px);
+            transform: translateY(-100px) translateX(-100px);
   }
   100% {
-    -webkit-transform: translateY(100px) translateX(100px);
-            transform: translateY(100px) translateX(100px);
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
   }
 }
 @keyframes slide-br {
   0% {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(-100px) translateX(-100px);
+            transform: translateY(-100px) translateX(-100px);
   }
   100% {
-    -webkit-transform: translateY(100px) translateX(100px);
-            transform: translateY(100px) translateX(100px);
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
+
   }
 }
 
 .slide-tl {
-	-webkit-animation: slide-tl 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	        animation: slide-tl 0.7s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: slide-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
  @-webkit-keyframes slide-tl {
   0% {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(100px) translateX(100px);
+            transform: translateY(100px) translateX(100px);
+   
   }
   100% {
-    -webkit-transform: translateY(-100px) translateX(-100px);
-            transform: translateY(-100px) translateX(-100px);
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
   }
 }
 @keyframes slide-tl {
   0% {
-    -webkit-transform: translateY(0) translateX(0);
-            transform: translateY(0) translateX(0);
+    -webkit-transform: translateY(100px) translateX(100px);
+            transform: translateY(100px) translateX(100px);
   }
   100% {
-    -webkit-transform: translateY(-100px) translateX(-100px);
-            transform: translateY(-100px) translateX(-100px);
+    -webkit-transform: translateY(0) translateX(0);
+            transform: translateY(0) translateX(0);
+   
   }
 }
+
+.slide-top {
+	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+}
+
+ @-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(100px);
+            transform: translateY(100px);
+  }
+  100% {
+    -webkit-transform: translateY(0px);
+            transform: translateY(0px);
+  }
+}
+
+
