style: landing and transition

--- a/src/index.css
+++ b/src/index.css
@@ -336,3 +336,19 @@
   width: fit-content;
   animation: scrollRevert 20s linear infinite;
 }
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
+
+/* horizon scroll */
+.horizontal-scroll {
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+
+}
