--- a/src/index.css
+++ b/src/index.css
@@ -352,3 +352,21 @@
   scroll-snap-type: x mandatory;
 
 }
+
+@keyframes gradient-motion {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.gradient-bg {
+  background: linear-gradient(90deg, #24B874, #a4f9c8, #24B874);
+  background-size: 200% 200%;
+  animation: gradient-motion 5s ease infinite;
+}
