--- a/src/index.css
+++ b/src/index.css
@@ -370,3 +370,8 @@
   background-size: 200% 200%;
   animation: gradient-motion 5s ease infinite;
 }
+
+* {
+  font-family: "Open Sans", serif;
+  font-display: swap;
+}
